--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Node.js on Azure Template</title>
+    //James Mackowiak
+    //Getting to know each other
+    //Software Engineering
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" href="Home.css">
 </head>
 <body>
-	<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-	<p>This repository is a template that can be used to create a Node.js and Express website for hosting on Microsoft 
-	Azure.</p>
+<!-- requirments 1-->
+<h1>James</h1>
+<h1>Email: jamesvmackowiak@lewisu.edu</h1>
+<h1>Discord: nightmaresauir</h1>
+
+<br>
+
+<img src="IMG_2757.JPG" height="896" width="504" class="center">
+
+<br>
+<!-- requirments 2-->
+<h3>Introduction</h3>
+<p>My name is James Mackowiak, this is my 3rd year at Lewis University.<br>
+    I am a Computer science major and I am thinking of concetrating in Video<br> Game Development
+    I have 2 brothers and 1 sister which live with my Dad and I visit the, often.</p>
+<br>
+<h3>What I hope to learn from this course</h3>
+<p>I am hoping to get to learn how to effectively work in a group on programming,<br>
+    since none of my other classes had a focus on this style of programming.<br>
+    I hope to be able to effectively learn how to use Cloud hosting and good habits<br>
+    for software development. </p>
+<br>
+<h3>My favorite Hobby/Activity</h3>
+<p>My favorite activity is playing video games or listening to music. I currently<br>
+    play Tom Clancy's Rainbow Six Siege or Destiny 2 right now. My favorite genre<br>
+    of music is Country and my favorite song at the moment is 'Rich Men North of Richmond'<br>
+    by Oliver Anthony</p>
+<br>
+<h3>Fun Fact</h3>
+<p>A fun fact about me is that I am in the Army Reserves and this will be my 5th year in<br>
+    I have had lots of great memories and overall a great experience so far. I have also <br>
+    done lots of cool things.</p>
+<br>
+<!--Requirments 3 -->
+<h3>Greatest Inventions</h3>
+<ul style="list-style-type: square">
+    <li>The ENIAC(Electronic Numerical Integrator and Computer),<br>
+        the worlds first general purpose computer<br>
+        <a href="https://www.bricsys.com/en-eu/blog/who-invented-computers">link to ENIAC</a>
+    </li>
+    <li>FORTRAN, the first widely accepted high level programming language<br>
+        <a href="https://www.ibm.com/ibm/history/ibm100/us/en/icons/fortran/transform/">link to FORTRAN</a>
+    </li>
+    <li>
+        MDA and CGA, the first two video cards that were developed by IBM
+        <a href="https://www.computerhope.com/history/videocard.htm#:~:text=IBM%20developed%20their%20first%2
+        0two,16%20KB%20of%20video%20memory.">link to MDA and CGA </a>
+    </li>
+    <br>
+
+
+</ul>
 </body>
 </html>
